Fix minor bugs with spacing

--- a/style.css
+++ b/style.css
@@ -4,15 +4,6 @@ body {
     margin: 0;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    margin: 0;
-}
-
 .header,
 .section-one {
     background-color: #1F2937;
@@ -58,6 +49,11 @@ h6 {
 
 .header-link {
     text-decoration: none;
+}
+
+.hero-text {
+    width: 475px;
+    margin: auto 0;
 }
 
 .hero-main {
@@ -111,7 +107,6 @@ h6 {
     border-radius: 15px;
     border: 3px solid #3882f6;
     vertical-align: middle;
-    margin-bottom: 8px;
 }
 
 .section-three {
